<resources>
    <string name="app_name">요소수 주유소</string>
    <string name="navi_item_first">가까운 주유소</string>
    <string name="navi_tiem_second">요소수 현황</string>
    <string name="navi_item_third">지도로 보기</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="table_item_1">요소수 양</string>
    <string name="table_item_2">1L 당 가격</string>
    <string name="table_item_3">위치</string>
    <string name="detail_address">상세 주소 :</string>
    <string name="temporary_detail_address">상세주소 적기</string>
    <string name="title_activity_detail">DetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="operating_time">운영 시간 :</string>
    <string name="please_note">참고해주세요!</string>
    <string name="skill_guide">상세주소나, 연락처를 클릭하시면 복사가 됩니다. \n지도 기능은 추후 업데이트 예정입니다.</string>
    <string name="situation_information">전국의 중점 유통 주유소의 요소수 재고 현황이며, 요소수 중점유통 주유소에서 2시간 간격으로 입력하는 데이터를 5분 단위로 업데이트하여 제공하여 실제 재고 현황과 일부 차이가 있을 수 있습니다. 공개되는 요소수 가격은 기본적으로 벌크 요소수 가격이며, 페트 요소수 가격은 표시된 가격과 다를 수 있습니다. 벌크 요소수가 매진 되었을 경우, 페트 요소수 가격으로 업데이트 됩니다.</string>
    <string name="source">출처 : 공공데이터포털</string>
    <string name="update_date">갱신 날짜 :</string>
    <string name="phone_number">연락처 :</string>
    <string name="main_guide">5분에 한 번씩 갱신됩니다. \n스크롤을 통해 새로고침 해주세요.</string>
</resources>