<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="10"
    android:orientation="vertical"
    tools:ignore="UselessParent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:fillViewport="true"
        tools:ignore="ScrollViewCount">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/ready_image"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:id="@+id/address_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/table_cell_shape_b"
                android:orientation="horizontal"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/detail_address"
                    android:textSize="@dimen/detail_title_size" />

                <TextView
                    android:id="@+id/detail_address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/temporary_detail_address"
                    android:textSize="@dimen/detail_description_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/table_cell_shape_b"
                android:orientation="horizontal"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/operating_time"
                    android:textSize="@dimen/detail_title_size" />

                <TextView
                    android:id="@+id/operating_time"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/detail_description_size" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/phone_number_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/table_cell_shape_b"
                android:orientation="horizontal"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/phone_number"
                    android:textSize="@dimen/detail_title_size" />

                <TextView
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/detail_description_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/table_cell_shape_b"
                android:orientation="horizontal"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/update_date"
                    android:textSize="@dimen/detail_title_size" />

                <TextView
                    android:id="@+id/update_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/detail_description_size" />
            </LinearLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="50dp"
                android:stretchColumns="0, 1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/table_cell_shape_tlb"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/table_item_1"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/table_cell_shape_a"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/table_item_2"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="15sp"
                        android:textStyle="bold" />


                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/diesel_stock"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/table_cell_shape_lb"
                        android:gravity="center"
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/table_cell_shape_br"
                        android:gravity="center"
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="14sp" />

                </TableRow>
            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/please_note"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/skill_guide"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/situation_information"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/source"
                    android:textSize="15sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="10dp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-7522479314167243/9958000125" />


</LinearLayout>