<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="@dimen/item_card_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="12dp"
                    android:text="@string/detail_address"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/card_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="12dp"
                    android:text="@string/temporary_gas_station_name"
                    android:textSize="15sp"
                    android:textStyle="bold" />


            </LinearLayout>


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="0, 1, 2">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/table_cell_shape_b"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/table_item_1"
                        android:textStyle="bold"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/table_cell_shape_lb"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/table_item_2"
                        android:textStyle="bold"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/table_cell_shape_lb"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/table_item_3"
                        android:textStyle="bold"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/diesel_stock"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/table_cell_shape_l"
                        android:gravity="center"
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/table_cell_shape_l"
                        android:gravity="center"
                        android:padding="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </TableRow>
            </TableLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>